# image_parser

./: .gitignore  ANDROID_13_COMPATIBILITY_CHECK.md  ANDROID_14_LIMITATION.md  BUILD_DEBUG_APK.md  CRASH_FIX_SUMMARY.md  DEBUG_GUIDE.md  HERO_RECOGNITION_FEATURE.md  PHONE_TEST_GUIDE.md  QUICK_BUILD_GUIDE.md  QUICK_FIX.md  QUICK_TEST_CHECKLIST.md  RANDOM_CD_FEATURE.md  README.md  SKILL_SELECTION_GUIDE.md  build.gradle  init_gradle_wrapper.sh  settings.gradle
web_scraper/: README.md  extract_hero_data.py  pyproject.toml  requirements.txt  scraper.py
web_scraper/hero_data/: heroes_skill4_data.json
web_scraper/scraped_content/: herolist_list_20251112_155416.txt  上官婉儿_detail_20251112_155521.txt  不知火舞_detail_20251112_155652.txt  东皇太一_detail_20251112_155609.txt  云中君_detail_20251112_155510.txt  云缨_detail_20251112_171421.txt  亚瑟_detail_20251112_155646.txt  伽罗_detail_20251112_155527.txt  元歌_detail_20251112_155535.txt  公孙离_detail_20251112_155548.txt  兰陵王_detail_20251112_155659.txt  关羽_detail_20251112_155718.txt  典韦_detail_20251112_155736.txt  刘备_detail_20251112_155638.txt  刘禅_detail_20251112_172727.txt  刘邦_detail_20251112_155705.txt  司马懿_detail_20251112_155531.txt  后羿_detail_20251112_155640.txt  吕布_detail_20251112_172710.txt  周瑜_detail_20251112_172708.txt  哪吒_detail_20251112_155617.txt  墨子_detail_20251112_172739.txt  夏侯惇_detail_20251112_172706.txt  大乔_detail_20251112_155611.txt  太乙真人_detail_20251112_155619.txt  女娲_detail_20251112_155552.txt  妲己_detail_20251112_172737.txt  姜子牙_detail_20251112_155707.txt  娜可露露_detail_20251112_155650.txt  嫦娥_detail_20251112_155519.txt  (+66 more)
(+29 files in other folders)
